@@ -2,25 +2,24 @@ package ee.kaido.kmdb.service;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import ee.kaido.kmdb.controller.exception.BadRequestException;
-import ee.kaido.kmdb.controller.exception.ElementExistsException;
-import ee.kaido.kmdb.controller.exception.ResourceNotFoundException;
-import ee.kaido.kmdb.model.Actor;
-import ee.kaido.kmdb.model.ActorDTO;
-import ee.kaido.kmdb.model.Movie;
-import ee.kaido.kmdb.model.MovieDTO;
+import ee.kaido.kmdb.dto.ActorDTO;
+import ee.kaido.kmdb.dto.MovieDTO;
+import ee.kaido.kmdb.entity.Actor;
+import ee.kaido.kmdb.entity.Movie;
+import ee.kaido.kmdb.exception.BadRequestException;
+import ee.kaido.kmdb.exception.ResourceNotFoundException;
 import ee.kaido.kmdb.repository.ActorRepository;
 import ee.kaido.kmdb.repository.MovieRepository;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
-import static ee.kaido.kmdb.service.checkers.Checks.checkIfActorIdExists;
-import static ee.kaido.kmdb.service.checkers.Checks.checkIfStringNotEmpty;
+import static ee.kaido.kmdb.deserializers.checkers.Checks.checkIfStringNotEmpty;
 
 @Service
 public class ActorService {
@@ -35,37 +34,63 @@ public class ActorService {
         this.mapper = mapper;
     }
 
-    public ActorDTO createActor(Map<String, Object> data) throws ElementExistsException, BadRequestException, ResourceNotFoundException {
-        JsonNode jsonNode = mapper.convertValue(data, JsonNode.class);
-        if (jsonNode.has("id"))
-            checkIfActorIdExists(jsonNode.get("id").asLong(), actorRepository);
-        Actor actor = new Actor();
-        updateActorFields(jsonNode, actor, true);
+    public ActorDTO createActor(ActorDTO actorDTO) throws BadRequestException {
+        Actor actor = new Actor(actorDTO);
+        List<Movie> movies = new ArrayList<>();
+        setActorMovies(actorDTO, actor, movies);
         Actor savedActor = actorRepository.save(actor);
         return new ActorDTO(savedActor, true);
     }
 
-    public List<ActorDTO> getActorsByFilter(String name) {
-        return actorRepository.findByNameContains(name)
-                .stream()
-                .map(actor -> new ActorDTO(actor, true))
-                .collect(Collectors.toList());
+    private void setActorMovies(ActorDTO actorDTO, Actor actor, List<Movie> movies) {
+        if (actorDTO.getMovies() != null) {
+            List<Long> movieIds = actorDTO.getMovies().stream().map(MovieDTO::getId).toList();
+            movieIds.forEach(movieId -> {
+                try {
+                    Movie movie = movieRepository.findById(movieId).orElseThrow(() -> new ResourceNotFoundException("Movie not found"));
+                    movie.getActors().add(actor);
+                    movies.add(movie);
+                } catch (ResourceNotFoundException e) {
+                    throw new RuntimeException(e);
+                }
+                actor.setMovies(movies);
+            });
+        }
     }
 
-    public ActorDTO findActorDtoById(long id) throws ResourceNotFoundException {
-        return new ActorDTO(getActorByIdOrThrowError(id), true);
+    public List<ActorDTO> getActorsByFilter(String name, Integer page, Integer size, Boolean showMovies) {
+        //check if Pageable is ok
+        if (page != null && page >= 0 && size != null && size > 0) {
+            Pageable pageable = PageRequest.of(page, size);
+            return actorRepository
+                    .findByNameContainsPageable(name, pageable)
+                    .stream()
+                    .map(actor -> new ActorDTO(actor, showMovies))
+                    .collect(Collectors.toList());
+        } else {
+            //else get list without pageable
+            return actorRepository
+                    .findByNameContains(name)
+                    .stream()
+                    .map(actor -> new ActorDTO(actor, showMovies))
+                    .collect(Collectors.toList());
+        }
+    }
+
+    public ActorDTO findActorDtoById(long id, boolean showMovies) throws ResourceNotFoundException {
+        return new ActorDTO(getActorByIdOrThrowError(id), showMovies);
     }
 
     public Actor getActorByIdOrThrowError(long id) throws ResourceNotFoundException {
         return actorRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("No actor found with id: " + id));
     }
 
-    public ActorDTO updateActor(Long id, Map<String, Object> data) throws ResourceNotFoundException, BadRequestException {
+    public ActorDTO updateActor(Long id, Map<String, Object> data, boolean showMovies) throws ResourceNotFoundException, BadRequestException {
         Actor actor = getActorByIdOrThrowError(id);
         JsonNode jsonNode = mapper.convertValue(data, JsonNode.class);
-        updateActorFields(jsonNode, actor, false);
+        updateActorFields(jsonNode, actor);
         Actor savedActor = actorRepository.save(actor);
-        return new ActorDTO(savedActor, true);
+        return new ActorDTO(savedActor, showMovies);
     }
 
     public void deleteActor(Long id, boolean force) throws ResourceNotFoundException, BadRequestException {
@@ -80,31 +105,25 @@ public class ActorService {
         actorRepository.deleteById(id);
     }
 
-    private void removeActorFromMovie(Actor actor) {
+    private void removeActorFromMovies(Actor actor) {
         List<Movie> movies = movieRepository.getMoviesByFilters(null, null, actor, null);
         movies.forEach((movie) -> movie.removeActor(actor));
     }
 
-    private void updateActorFields(JsonNode jsonNode, Actor actor, boolean create) throws BadRequestException, ResourceNotFoundException {
+    private void updateActorFields(JsonNode jsonNode, Actor actor) throws BadRequestException, ResourceNotFoundException {
         actor.setName(updateName(jsonNode));
         actor.setBirthDate(updateBirthDate(jsonNode));
-        actor.setMovies(updateMovies(jsonNode, actor, create));
+        actor.setMovies(updateMovies(jsonNode, actor));
     }
 
-    private List<Movie> updateMovies(JsonNode jsonNode, Actor actor, boolean create) throws ResourceNotFoundException {
+    private List<Movie> updateMovies(JsonNode jsonNode, Actor actor) throws ResourceNotFoundException {
         List<Movie> movies = new ArrayList<>();
         if (jsonNode.has("movies")) {
             JsonNode moviesJsonNode = jsonNode.get("movies");
-            if (!create && actor != null) {
-                removeActorFromMovie(actor);
-            }
+
+            removeActorFromMovies(actor);
             for (JsonNode movieJsonNode : moviesJsonNode) {
-                long movieId;
-                if (movieJsonNode.has("id")) {
-                    movieId = movieJsonNode.get("id").asLong();
-                } else {//if its a list of longs
-                    movieId = movieJsonNode.asLong();
-                }
+                long movieId = movieJsonNode.has("id") ? movieJsonNode.get("id").asLong() : movieJsonNode.asLong();
                 Movie movie = movieRepository.findById(movieId).orElseThrow(() -> new ResourceNotFoundException("No movie found with id: " + movieId));
                 movies.add(movie);
                 movie.getActors().add(actor);
@@ -130,9 +149,9 @@ public class ActorService {
         }
     }
 
-    public List<MovieDTO> getActorMovies(long id) {
+    public List<MovieDTO> getActorMovies(long id) throws ResourceNotFoundException {
 
-        return actorRepository.findById(id).orElseThrow(() -> new NoSuchElementException("No actor found with id: " + id))
+        return actorRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("No actor found with id: " + id))
                 .getMovies()
                 .stream()
                 .map(movie ->
